--- a/src/Pages/Pages.css
+++ b/src/Pages/Pages.css
@@ -1,22 +1,186 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.kanit-thin {
+    font-family: "Kanit", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .kanit-extralight {
+    font-family: "Kanit", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+  }
+  
+  .kanit-light {
+    font-family: "Kanit", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .kanit-regular {
+    font-family: "Kanit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .kanit-medium {
+    font-family: "Kanit", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .kanit-semibold {
+    font-family: "Kanit", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  }
+  
+  .kanit-bold {
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .kanit-extrabold {
+    font-family: "Kanit", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
+  
+  .kanit-black {
+    font-family: "Kanit", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .kanit-thin-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .kanit-extralight-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+  }
+  
+  .kanit-light-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .kanit-regular-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .kanit-medium-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .kanit-semibold-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+  }
+  
+  .kanit-bold-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .kanit-extrabold-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 800;
+    font-style: italic;
+  }
+  
+  .kanit-black-italic {
+    font-family: "Kanit", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+
 Form{
 
     font-size: 1.5pc;
+    min-width: 500px;
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgb(125,125,125);
+    background: linear-gradient(127deg, rgba(125,125,125,1) 0%, rgba(139,139,139,1) 25%, rgba(167,167,167,1) 70%, rgba(138,138,138,1) 100%);
+    padding: 3%;
+    border: 3px solid rgb(94, 94, 94);
+    border-radius: 10%;
 
 }
 
 .containertxt{
 
+    background: rgba(255, 255, 0, 0);
+    margin-left: 12%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-right: 12%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+.containerCardstxt{
+
+    width: 35%;
+    height: 91vh;
+    background: rgba(137, 43, 226, 0);
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+
+}
+.Cardstxt{
+
+    width: 270px;
+    height: 270px;
+    background: rgb(128, 128, 128);
+    border-radius: 15px;
+    color: white;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    font-size: 2.5pc;
+
+}
+
+line{
+
+    background: black;
+    height: 5px;
     
+
 }
 
 .cardtext{
 
     font-size: 1pc;
-    width: 60%;
+    width: 20%;
+    border-left: 5px solid black;
+    border-radius: 6px;
+    padding-left: 20px;
 
 
 }
