--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(223,223,223);
+  background: linear-gradient(90deg, rgba(223,223,223,1) 0%, rgba(255,255,255,1) 30%, rgba(226,226,226,1) 73%, rgba(255,255,255,1) 100%);
 }
 
 code {
